# RandPicker

./: .editorconfig  .gitignore  404.html  LitheNum.md  README.md  RandPicker-macOS.spec  RandPicker.sln  app.py  conf-old.py  conf.py  config.ini  crash_handler.py  default_config.json  guid.md  history.json  index.html  lithe_updater.py  main.py  mkdocs.yml  pyproject.toml  qodana.yaml  requirements.txt  settings.py  students.json  students_example.csv  update.py  updater.py
.github/workflows/: build.yaml  build.yml  qodana_code_quality.yml  release.yml
RandPicker/: App.axaml  App.axaml.cs  Program.cs  RandPicker.csproj
RandPicker.Config/: Student.cs
RandPicker/Models/: AttendanceRecord.cs  BehaviorAssessment.cs  GradeRecord.cs  Group.cs  LearningProgress.cs  OperationLog.cs  ParentCommunication.cs  Student.cs  StudentProfile.cs
RandPicker/Services/: DataService.cs  StudentManagementService.cs
RandPicker/ViewModels/: AttendanceManagementViewModel.cs  MainDashboardViewModel.cs  (+3 more)
assets/: icon-dark.icns  icon-light.icns
conf/: __init__.py  group.py  imp.py  ini.py  stu.py  student.py
config/: settings.json  students.json
core/: __init__.py  choice.py  face.py  git_info.py  main.py  tray.py  uiaccess.py  version_info.py  widget.py
docs/: index.md
installation/: index.html
lib/: randpicker.runtimeconfig.json
scripts/: README.md  build.py  post_build.py  pre_build.py  pyinstaller_args.py
search/: search_index.json
settings/: __init__.py  config_manager.py  settings_window.py  utils.py
src/: widget.qml
ui/: widget-no-avatar.ui  widget.ui
(+173 files in other folders)
